--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-    <div>
+    <div class="btn-container">
       <button type="button" data-start>Start</button>
       <button type="button" data-stop>Stop</button>
     </div>
